--- a/DataCollectionReceiver/pom.xml
+++ b/DataCollectionReceiver/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>DataCollectionDispatcher</artifactId>
+    <artifactId>DataCollectionReceiver</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>DataCollectionDispatcher</name>
-    <description>DataCollectionDispatcher</description>
+    <name>DataCollectionReceiver</name>
+    <description>DataCollectionReceiver</description>
     <properties>
         <java.version>22</java.version>
     </properties>
@@ -27,17 +27,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+
         <dependency>
             <groupId>com.rabbitmq</groupId>
             <artifactId>amqp-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
