--- a/PdfGenerator/pom.xml
+++ b/PdfGenerator/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>DataCollectionDispatcher</artifactId>
+    <artifactId>PdfGenerator</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>DataCollectionDispatcher</name>
-    <description>DataCollectionDispatcher</description>
+    <name>PdfGenerator</name>
+    <description>PdfGenerator</description>
     <properties>
         <java.version>22</java.version>
     </properties>
@@ -27,23 +27,44 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>com.rabbitmq</groupId>
             <artifactId>amqp-client</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>kernel</artifactId>
+            <version>7.2.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>layout</artifactId>
+            <version>7.2.5</version>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>itextpdf</id>
+            <url>https://repo.itextsupport.com/releases</url>
+        </repository>
+    </repositories>
 
     <build>
         <plugins>
