--- a/StationDataCollector/pom.xml
+++ b/StationDataCollector/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>DataCollectionDispatcher</artifactId>
+    <artifactId>StationDataCollector</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>DataCollectionDispatcher</name>
-    <description>DataCollectionDispatcher</description>
+    <name>StationDataCollector</name>
+    <description>StationDataCollector</description>
     <properties>
         <java.version>22</java.version>
     </properties>
@@ -32,16 +32,12 @@
             <artifactId>amqp-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
         </dependency>
     </dependencies>
 
